# Proyecto2_sopes1

./: Readme.md  Readme.mk  docker-compose.yml
API/api_rest_bf/: Cargo.toml  Dockerfile  build.rs
API/api_rest_bf/proto/: blackfriday.proto
API/api_rest_bf/src/: main.rs
Locust/: locustfile.py
blackfriday/: go.mod
blackfriday/gRPC_Client/: Dockerfile  main.go
blackfriday/gRPC_Server/: Dockerfile  main.go
blackfriday/proto/: blackfriday.pb.go  blackfriday_grpc.pb.go
k8s/: api-rust-hpa.yaml  api-rust.yaml  go-client.yaml  go-server.yaml  grafana-datasource-valkey.yaml  grafana-ingress.yaml  grafana-values.yaml  grafana.yaml  ingress.yaml  kafka-consumer.yaml  kafka-kraft.yaml  redis-exporter.yaml  topic-ventas.yaml  valkey-kubevirt.yaml  valkey-statefulset.yaml
k8s_anterior/: all.yaml
k8s_kafka/: Dockerfile  go.mod  main.go
